First attempt to fix responsiveness on mobile

--- a/frontend/src/assets/scss/_responsive.scss
+++ b/frontend/src/assets/scss/_responsive.scss
@@ -670,7 +670,7 @@
   }
 
   .ras-banner-1 .ras-slide {
-    height: 550px;
+    min-height: 550px;
   }
 
   .ras-banner-1 .hero-btn {
